<resources>
    <string name="app_name">FormIt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_people">People</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_tournament">Tournament</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="tool_refresh">Refresh</string>
    <string name="tool_search">Search</string>

    <string name="button_expert">Expert</string>
    <string name="button_advanced">Advanced</string>
    <string name="button_proficient">Proficient</string>
    <string name="button_intermediate">Intermediate</string>
    <string name="button_beginner">Beginner</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="choose_skill_level">Choose skill level</string>
    <string name="add_person">Add Person</string>
    <string name="hint_name">Name</string>
</resources>