<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_add_dialog"
    android:layout_marginEnd="30sp"
    android:layout_marginRight="30sp"
    android:layout_marginLeft="30sp"
    android:layout_marginStart="30sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/add_person"
        android:textSize="20sp"
        android:textColor="@color/main_3"
        android:gravity="center"
        android:layout_alignParentTop="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_nameET"
        android:theme="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="17sp"
            android:textColor="@color/dark_gray_secondary"/>
    </com.google.android.material.textfield.TextInputLayout>



    <RadioGroup
        android:id="@+id/radioGroup_skillLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingStart="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_skill_level"
            android:textSize="18sp"
            android:textColor="@color/dark_gray_secondary"/>

        <RadioButton
            android:id="@+id/radioButton_beginner"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:text="@string/button_beginner"
            android:textColor="@color/beginner"
            android:buttonTint="@color/beginner"
            android:checked="true"/>


        <RadioButton
            android:id="@+id/radioButton_intermediate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:text="@string/button_intermediate"
            android:textColor="@color/intermediate"
            android:buttonTint="@color/intermediate"/>

        <RadioButton
            android:id="@+id/radioButton_proficient"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:text="@string/button_proficient"
            android:textColor="@color/proficient"
            android:buttonTint="@color/proficient"/>


        <RadioButton
            android:id="@+id/radioButton_advanced"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:text="@string/button_advanced"
            android:textColor="@color/advanced"
            android:buttonTint="@color/advanced"/>

        <RadioButton
            android:id="@+id/radioButton_expert"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textSize="17sp"
            android:text="@string/button_expert"
            android:textColor="@color/expert"
            android:buttonTint="@color/expert"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="17dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:theme="@style/Theme.Fit.Button"
            android:text="@string/cancel"
            android:textColor="@drawable/button_purple_txt"
            android:background="@drawable/button_purple"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/ok"
            android:textColor="@drawable/button_purple_txt"
            android:background="@drawable/button_purple"/>

    </LinearLayout>


</LinearLayout>